# tarantool-zmq

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  test.lua
cmake/: FindTarantool.cmake
debian/: .gitignore  changelog  control  copyright
rockspecs/: zmq-scm-1.rockspec
rpm/: tarantool-zmq.spec
test/: 010-test-basic.lua  020-test-reqrep.lua
zmq/: CMakeLists.txt  init.lua  internal.lua  internal_lib.c
